Fix menu list wrap in right sidebar

--- a/scss/modules/basicpage.scss
+++ b/scss/modules/basicpage.scss
@@ -41,6 +41,7 @@
 
   nav {
     ul.nav {
+      flex-flow: column;
       margin: 0;
     }
   }
